--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "node-sass-chokidar": "^1.2.2",
     "react": "^16.2.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-numeric-input": "^2.2.3",
     "react-scripts": "1.1.1",
